# hophop

./: README.md
doc/: dect-firmware.md  hardware.md  options.md  peculiarities.md  reference-projects.md
hophop/: Cargo.toml
test-libmodem/: Cargo.toml  laze-project.yml
test-libmodem/src/: main.rs
