[package]
name = "hophop"
version = "0.0.1"
edition = "2024"

readme = "../README.md"
description = "Exploring DECT-2020 NR+"

license = "MIT OR Apache-2.0"
repository = "https://github.com/ariel-os/hophop"
keywords = ["dect", "dect2020", "iot"]
categories = ["no-std::no-alloc"]

[dependencies]

[workspace.metadata.release]
sign-tag = true
